--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
+html{
+    scroll-behavior: smooth;
+}
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+ 
 }
 
 /* Estilos do cabeçalho */
@@ -43,29 +49,7 @@ nav ul li a {
     max-width: 100%;
 }
 
-/* Outros estilos para as outras seções podem ser adicionados aqui */
 
-/* Estilos para dispositivos móveis */
-@media screen and (max-width: 768px) {
-    header {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .name {
-        margin-bottom: 1rem;
-    }
-
-    nav ul {
-        flex-direction: column;
-        margin-top: 1rem;
-    }
-
-    nav ul li {
-        margin-right: 0;
-        margin-bottom: 0.5rem;
-    }
-}
 
 .logo{
     height: 5%;
